[tool.poetry]
name = "jterritory"
version = "0.1.0"
description = "Minimal JMAP server for prototyping"
authors = ["Jamey Sharp <jamey@minilop.net>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.8.1"
SQLAlchemy = "^1.4.7"

[tool.poetry.dev-dependencies]
coverage = {extras = ["toml"], version = "^5.2.1"}
hypothesis = "^6.10.0"
pytest = "^6.2.3"
pytest-black = "^0.3.12"
pytest-cov = "^2.11.1"
pytest-flakes = "^4.0.3"
pytest-mypy = "^0.8.1"
sqlalchemy2-stubs = "^0.0.1-alpha.4"

[tool.pytest.ini_options]
addopts = """\
  --mypy \
  --doctest-modules \
  --import-mode importlib \
  --cov-report html --cov-report term:skip-covered --no-cov-on-fail \
"""
testpaths = ["jterritory", "tests"]

[tool.coverage.run]
source = ["jterritory"]

[tool.coverage.report]
skip_empty = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
